--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -365,7 +365,7 @@ C_B_H_14 : "Dᴇʟᴇᴛɪɴɢ ᴀʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs..."
 C_B_H_15 : "Aʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs ʜᴀᴠᴇ ʙᴇᴇɴ ᴅᴇʟᴇᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ."
 C_B_H_16 : "Yᴏᴜ ʜᴀᴠᴇɴ'ᴛ ᴄʟᴏɴᴇᴅ ᴀɴʏ ʙᴏᴛs ʏᴇᴛ."
 
-c_start_2 : "ʜᴇʏ, {0}\nɪ'ᴍ {1},\n\nᴀ ᴄʟᴏɴᴇᴅ ᴠᴇʀsɪᴏɴ ᴏғ [{2}]({3})!\nɪғ ʏᴏᴜ ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴄʟᴏɴᴇᴅ ʙᴏᴛ, ᴠɪsɪᴛ [{4}]({5}) ᴀɴᴅ ᴜsᴇ ᴛʜᴇ /clone ᴄᴏᴍᴍᴀɴᴅ!\n\n┏━━━━━━━━━━━━━━━━━⧫\n┠ ◆ ᴜᴘᴅᴀᴛᴇ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ]({6})\n┠ ◆ sᴜᴘᴘᴏʀᴛ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ]({7})\n┗━━━━━━━━━━━━━━━━━⧫\n\n๏ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs.\n\n“ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴘᴇʀsᴏɴᴀʟɪᴢᴇᴅ ᴍᴜsɪᴄ ʙᴏᴛ? ᴊᴜsᴛ ʀᴇᴀᴄʜ ᴏᴜᴛ ᴛᴏ [ᴅᴇᴠ](https://t.me/GhosttBatt) ғᴏʀ ᴅᴇᴛᴀɪʟs!”"
+c_start_2 : "<blockquote>ʜᴇʏ, {0}\nɪ'ᴍ {1},</blockquote>\n<blockquote>ᴀ ᴄʟᴏɴᴇᴅ ᴠᴇʀsɪᴏɴ ᴏғ [{2}]({3})!</blockquote>\n<blockquote>ɪғ ʏᴏᴜ ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴄʟᴏɴᴇᴅ ʙᴏᴛ, ᴠɪsɪᴛ [{4}]({5}) ᴀɴᴅ ᴜsᴇ ᴛʜᴇ /clone ᴄᴏᴍᴍᴀɴᴅ!</blockquote>\n\n<blockquote>┏━━━━━━━━━━━━━━━━━⧫\n┠ ◆ ᴜᴘᴅᴀᴛᴇ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ]({6})\n┠ ◆ sᴜᴘᴘᴏʀᴛ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ]({7})\n┗━━━━━━━━━━━━━━━━━⧫</blockquote>\n\n“<blockquote>ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴘᴇʀsᴏɴᴀʟɪᴢᴇᴅ ᴍᴜsɪᴄ ʙᴏᴛ? ᴊᴜsᴛ ʀᴇᴀᴄʜ ᴏᴜᴛ ᴛᴏ [ᴅᴇᴠ](https://t.me/GhosttBatt)”</blockquote>"
 
 c_brod_1 : "» Yᴏᴜʀ ʙᴏᴛ ɴᴇᴇᴅs ᴀ ᴘʀᴇᴍɪᴜᴍ sᴜʙsᴄʀɪᴘᴛɪᴏɴ ᴛᴏ ᴜsᴇ `/broadcast`\n\n Jᴏɪɴ [ʜᴇᴀʀᴛʙᴇᴀᴛ]({0}) ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴀɴᴅ ɢᴇᴛ sᴛᴀʀᴛᴇᴅ !"
 
