--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -44,11 +44,11 @@ reload_4 : "<blockquote>❖ ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\nʀᴇʙᴏᴏᴛɪ
 reload_5 : "<blockquote>❖ sᴜᴄᴄᴇssғᴜʟʟʏ ʀᴇʙᴏᴏᴛᴇᴅ {0} ғᴏʀ ʏᴏᴜʀ ᴄʜᴀᴛ.</blockquote>\n\n<blockquote>❖ sᴛᴀʀᴛ ᴘʟᴀʏɪɴɢ ᴀɢᴀɪɴ...</blockquote>"
 
 admin_1 : "<blockquote>❖ ᴅɪᴅ ʏᴏᴜ ʀᴇᴍᴇᴍʙᴇʀ ᴛʜᴀᴛ ʏᴏᴜ'ᴠᴇ ʀᴇsᴜᴍᴇᴅ ᴛʜᴇ sᴛʀᴇᴀᴍ ?</blockquote>"
-admin_2 : "<blockquote>❖ sᴛʀᴇᴀᴍ ᴘᴀᴜsᴇᴅ 🎄</blockquote>\n│ \n<blockquote>└ʙʏ : {0} 🦋</blockquote>"
+admin_2 : "<blockquote>❖ sᴛʀᴇᴀᴍ ᴘᴀᴜsᴇᴅ 🎄</blockquote>\n<blockquote>│ \n└ʙʏ : {0} 🦋</blockquote>"
 admin_3 : "<blockquote>❖ ᴅɪᴅ ʏᴏᴜ ʀᴇᴍᴇᴍʙᴇʀ ᴛʜᴀᴛ ʏᴏᴜ'ᴠᴇ ᴘᴀᴜsᴇᴅ ᴛʜᴇ sᴛʀᴇᴀᴍ ?</blockquote>"
-admin_4 : "<blockquote>❖ sᴛʀᴇᴀᴍ ʀᴇsᴜᴍᴇᴅ 🎄\n│ \n</blockquote><blockquote>└ʙʏ : {0} 🦋</blockquote>"
-admin_5 : "<blockquote>❖ sᴛʀᴇᴀᴍ ᴇɴᴅᴇᴅ/sᴛᴏᴩᴩᴇᴅ 🎄</blockquote>\n│ \n<blockquote>└ʙʏ : {0} 🦋</blockquote>"
-admin_6 : "<blockquote>❖ sᴛʀᴇᴀᴍ sᴋɪᴩᴩᴇᴅ 🎄\n</blockquote>| \n<blockquote>└ʙʏ : {0} 🦋\n\n</blockquote><blockquote><b>❖ ɴᴏ ᴍᴏʀᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs ɪɴ</b> {1},</blockquote><blockquote> <b>ʟᴇᴀᴠɪɴɢ ᴠɪᴅᴇᴏᴄʜᴀᴛ.</b></blockquote>"
+admin_4 : "<blockquote>❖ sᴛʀᴇᴀᴍ ʀᴇsᴜᴍᴇᴅ 🎄</blockquote>\n<blockquote>│ \n└ʙʏ : {0} 🦋</blockquote>"
+admin_5 : "<blockquote>❖ sᴛʀᴇᴀᴍ ᴇɴᴅᴇᴅ/sᴛᴏᴩᴩᴇᴅ 🎄</blockquote>\n<blockquote>│ \n└ʙʏ : {0} 🦋</blockquote>"
+admin_6 : "<blockquote>❖ sᴛʀᴇᴀᴍ sᴋɪᴩᴩᴇᴅ 🎄</blockquote>\n<blockquote>| \n└ʙʏ : {0} 🦋\n\n</blockquote><blockquote><b>❖ ɴᴏ ᴍᴏʀᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs ɪɴ</b> {1},</blockquote><blockquote> <b>ʟᴇᴀᴠɪɴɢ ᴠɪᴅᴇᴏᴄʜᴀᴛ.</b></blockquote>"
 admin_7 : "<blockquote>❖ ᴇʀʀᴏʀ ᴡʜɪʟᴇ ᴄʜᴀɴɢɪɴɢ sᴛʀᴇᴀᴍ ᴛᴏ {0}.</blockquote>"
 admin_8 : "<blockquote>❖ ᴘʟᴇᴀsᴇ ᴅɪsᴀʙʟᴇ ʟᴏᴏᴘ ᴘʟᴀʏ ᴠɪᴀ <code>/loop disable</code> ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴛᴏ sᴋɪᴘ ᴀɢᴀɪɴ.</blockquote>"
 admin_9 : "<blockquote>❖ ᴘʟᴇᴀsᴇ ᴜsᴇ sᴘᴇᴄɪғɪᴄ ɴᴜᴍʙᴇʀs ғᴏʀ sᴋɪᴘ, ʟɪᴋᴇ 1, 2, 4...</blockquote>"
@@ -135,7 +135,7 @@ cplay_5 : "❖ ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "❖ ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\n❖ ᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "❖ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "<blockquote>ᴀ ƨᴏɴɢ ʙʏ ❤️ʜʙ-ғᴀᴍ...</blockquote>"
+play_1 : "\n<blockquote>ᴀ ƨᴏɴɢ ʙʏ ❤️ʜʙ-ғᴀᴍ...</blockquote>"
 play_2 : "<blockquote><b>❖ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b></blockquote>\n\n<blockquote>❖ ᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...</blockquote>\n\n<b><blockquote>❖ ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}</blockquote>"
 play_3 : "<blockquote>❖ ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ.</blockquote>"
 play_4 : "<blockquote><b> ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b></blockquote>\n<blockquote>ᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ</blockquote>\n\n<blockquote>❖ ᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode</blockquote>"
@@ -168,7 +168,7 @@ ping_2 : "<blockquote>❖ {1}\n\n🏓 ᴘɪɴɢ..ᴩᴏɴɢ : {0}ᴍs..\n\n❖ s
 queue_1 : "<blockquote>❖ ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...</blockquote>\n\n<blockquote>ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...</blockquote>"
 queue_2 : "<blockquote>❖ ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ.</blockquote>"
 queue_3 : "<blockquote><u>❖ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a></blockquote>"
-queue_4 : "<blockquote><b>❖ ηєтωσяк: [нɛαятвɛαт](https://t.me/HeartBeat_Offi) ⏤͟͞●</b></blockquote> #{0}</b></blockquote>\n<blockquote>‣ Tɪᴛʟє ➠ </b> {1}\n<b>❍ Dυʀᴧᴛɪση ➠ </b> {2} ϻɪηυᴛєs\n<b>❍ Rєǫυєsᴛєᴅ ʙʏ ➠ </b> {3}</blockquote>\n<blockquote>ᴄʟᴏɴᴇ: @CloneMusicRobot</blockquote>"
+queue_4 : "<blockquote><b>❖ ηω: [нɛαятвɛαт](https://t.me/HeartBeat_Offi) ⏤͟͞●</b>#{0}</b></blockquote>\n<blockquote>‣ Tɪᴛʟє ➠ </b> {1}\n<b>❍ Dυʀᴧᴛɪση ➠ </b> {2} ϻɪηυᴛєs\n<b>❍ Rєǫυєsᴛєᴅ ʙʏ ➠ </b> {3}</blockquote>\n<blockquote>ᴄʟᴏɴᴇ: @CloneMusicRobot</blockquote>"
 queue_5 : "<blockquote>❖ ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.</blockquote>\n\n<blockquote>ᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ.</blockquote>"
 queue_6 : "<blockquote><b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ</blockquote>\n\n<blockquote>ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ.</blockquote>"
 queue_7 : "\n<blockquote>❖ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ.</blockquote>"
@@ -365,9 +365,9 @@ C_B_H_14 : "Dᴇʟᴇᴛɪɴɢ ᴀʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs..."
 C_B_H_15 : "Aʟʟ ᴄʟᴏɴᴇᴅ ʙᴏᴛs ʜᴀᴠᴇ ʙᴇᴇɴ ᴅᴇʟᴇᴛᴇᴅ sᴜᴄᴄᴇssғᴜʟʟʏ."
 C_B_H_16 : "Yᴏᴜ ʜᴀᴠᴇɴ'ᴛ ᴄʟᴏɴᴇᴅ ᴀɴʏ ʙᴏᴛs ʏᴇᴛ."
 
-c_start_2 : "<blockquote>ʜᴇʏ, {0}\nɪ'ᴍ {1},</blockquote>\n<blockquote>ɪғ ʏᴏᴜ ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴄʟᴏɴᴇᴅ ʙᴏᴛ, ᴠɪsɪᴛ [{4}]({5}) ᴀɴᴅ ᴜsᴇ ᴛʜᴇ /clone ᴄᴏᴍᴍᴀɴᴅ!</blockquote>\n\n<blockquote>┏━━━━━━━━━━━━━━━━━⧫\n┠ ◆ ᴜᴘᴅᴀᴛᴇ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ](https://t.me/HeartBeat_Offi)\n┠ ◆ sᴜᴘᴘᴏʀᴛ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ](https://t.me/HeartBeat_Fam)\n┗━━━━━━━━━━━━━━━━━⧫</blockquote>\n\n“<blockquote>ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴘᴇʀsᴏɴᴀʟɪᴢᴇᴅ ᴍᴜsɪᴄ ʙᴏᴛ? ᴊᴜsᴛ ʀᴇᴀᴄʜ ᴏᴜᴛ ᴛᴏ [ᴅᴇᴠ](https://t.me/GhosttBatt)”</blockquote>"
+c_start_2 : "<blockquote>ʜᴇʏ, {0}\nɪ'ᴍ {1},</blockquote>\n<blockquote>ɪғ ʏᴏᴜ ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴄʟᴏɴᴇᴅ ʙᴏᴛ, ᴠɪsɪᴛ [{4}]({5}) ᴀɴᴅ ᴜsᴇ ᴛʜᴇ /clone ᴄᴏᴍᴍᴀɴᴅ!</blockquote>\n<blockquote>┏━━━━━━━━━━━━━━━━━⧫\n┠ ◆ ᴜᴘᴅᴀᴛᴇ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ](https://t.me/HeartBeat_Offi)\n┠ ◆ sᴜᴘᴘᴏʀᴛ : [ᴄʟɪᴄᴋ ʜᴇʀᴇ](https://t.me/HeartBeat_Fam)\n┗━━━━━━━━━━━━━━━━━⧫</blockquote>\n<blockquote>“ᴡᴀɴᴛ ʏᴏᴜʀ ᴏᴡɴ ᴘᴇʀsᴏɴᴀʟɪᴢᴇᴅ ᴍᴜsɪᴄ ʙᴏᴛ? ᴊᴜsᴛ ʀᴇᴀᴄʜ ᴏᴜᴛ ᴛᴏ [ɢʜᴏ𝗌ᴛʙᴀᴛ](https://t.me/GhosttBatt)”</blockquote>"
 
-c_brod_1 : "» Yᴏᴜʀ ʙᴏᴛ ɴᴇᴇᴅs ᴀ ᴘʀᴇᴍɪᴜᴍ sᴜʙsᴄʀɪᴘᴛɪᴏɴ ᴛᴏ ᴜsᴇ `/broadcast`\n\n Jᴏɪɴ [ʜᴇᴀʀᴛʙᴇᴀᴛ]({0}) ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴀɴᴅ ɢᴇᴛ sᴛᴀʀᴛᴇᴅ !"
+c_brod_1 : "» Yᴏᴜʀ ʙᴏᴛ ɴᴇᴇᴅs ᴀ ᴘʀᴇᴍɪᴜᴍ sᴜʙsᴄʀɪᴘᴛɪᴏɴ ᴛᴏ ᴜsᴇ `/broadcast`\n Jᴏɪɴ [ʜᴇᴀʀᴛʙᴇᴀᴛ]({0}) ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs ᴀɴᴅ ɢᴇᴛ sᴛᴀʀᴛᴇᴅ !"
 
 NOT_C_OWNER : "» Yᴏᴜ Aʀᴇ Nᴏᴛ Aᴜᴛʜᴏʀɪᴢᴇᴅ Tᴏ Usᴇ Tʜɪs Cᴏᴍᴍᴀɴᴅ\n\n Jᴏɪɴ [ʜᴇᴀʀᴛʙᴇᴀᴛ]({0}) ғᴏʀ ᴍᴏʀᴇ ᴅᴇᴛᴀɪʟs !"
 
