--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -168,7 +168,7 @@ ping_2 : "<blockquote>❖ {1}\n\n🏓 ᴘɪɴɢ..ᴩᴏɴɢ : {0}ᴍs..\n\n❖ s
 queue_1 : "<blockquote>❖ ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...</blockquote>\n\n<blockquote>ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...</blockquote>"
 queue_2 : "<blockquote>❖ ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ.</blockquote>"
 queue_3 : "<blockquote><u>❖ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a></blockquote>"
-queue_4 : "<blockquote><b>❖ ηω: [нɛαятвɛαт](https://t.me/HeartBeat_Offi) ⏤͟͞●</b>#{0}</b></blockquote>\n<blockquote>‣ Tɪᴛʟє ➠ </b> {1}\n<b>❍ Dυʀᴧᴛɪση ➠ </b> {2} ϻɪηυᴛєs\n<b>❍ Rєǫυєsᴛєᴅ ʙʏ ➠ </b> {3}</blockquote>\n<blockquote>ᴄʟᴏɴᴇ: @CloneMusicRobot</blockquote>"
+queue_4 : "<blockquote><b>❖ ηω: нɛαятвɛαт ⏤͟͞●</b>#{0}</b></blockquote>\n<blockquote>‣ Tɪᴛʟє ➠ </b> {1}\n<b>❍ Dυʀᴧᴛɪση ➠ </b> {2} ϻɪηυᴛєs\n<b>❍ Rєǫυєsᴛєᴅ ʙʏ ➠ </b> {3}</blockquote>\n<blockquote>ᴄʟᴏɴᴇ: @CloneMusicRobot</blockquote>"
 queue_5 : "<blockquote>❖ ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.</blockquote>\n\n<blockquote>ᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ.</blockquote>"
 queue_6 : "<blockquote><b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ</blockquote>\n\n<blockquote>ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ.</blockquote>"
 queue_7 : "\n<blockquote>❖ ᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ.</blockquote>"
